Improved compression of temporary files